predict_exoplanet/util/train2.out_2019-10-03-20:52
  File "./train2.py", line 2
    os.environ[\u201cCUDA_VISIBLE_DEVICES\u201d] =""
                                    ^
SyntaxError: invalid character in identifier
